# ROS2_Manip2Dof

./: .gitignore  CMakeLists.txt  README.md  my.repos  package.xml
include/2dof_practice/: Manip2Dof.hpp
launch/: manip2dof_practice_launch.xml
src/: Manip2Dof.cpp  Manip2DofPublisher.cpp  Manip2DofSubscriber.cpp  Manip2Dof_SetGoalTraceCircle.cpp  Manip2Dof_SolveGoal.cpp
